@@ -1,5 +1,13 @@
 2007-09-20  Dan Williams  <dcbw@redhat.com>
 
+	* src/applet.c
+		- (add_ciphers_from_flags, get_security_for_ap, nma_menu_item_activate):
+			autogenerate acceptable security parameters from AP information when
+			a wireless network is clicked and no compatible connection has been
+			defined yet
+
+2007-09-20  Dan Williams  <dcbw@redhat.com>
+
 	* src/password-dialog.c
 	  src/password-dialog.h
 	  src/applet-dbus-settings.c
